Wrap $filter function in conditional to prevent errors

--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ input[type="url"] {
 .isotope-to-sort a.button {
   color: #fefefe;
   border-bottom: 0;
+  text-transform: capitalize;
 }
 
 .isotope-to-sort a.button.is-checked {
